# huawei-ad-ontology

./: README.md  testdata.csv  validate_event_graph.hql  validate_event_graph_v2.hql  华为广告本体模型设计 v2.0.md  华为广告本体模型设计 v3.0.md  华为广告本体模型设计.md  当前的表说明.sql  指标列表  数据分析skill设计  汽车行业广告投放事理图谱.md  维度列表  说明
memory/: 2026-02-25.md
skills/data-insight-visualizer/: README.md  SKILL.md  package-lock.json  package.json
skills/data-insight-visualizer/lib/: chart-generator.js  data-processor.js
skills/data-insight-visualizer/test/: chart-generator.test.js  data-processor.test.js
skills/diagnostic-planner/: README.md  SKILL.md  package-lock.json  package.json
skills/diagnostic-planner/config/: sop.csv
skills/diagnostic-planner/lib/: sop-store.js
skills/diagnostic-planner/test/: diagnostic-sop.test.js
skills/metric-data-extractor/: README.md  SKILL.md  package-lock.json  package.json
skills/metric-data-extractor/config/: dimension-values.csv  dimensions.csv  metrics.csv
skills/metric-data-extractor/lib/: api-client.js  arg-parser.js  csv-loader.js  dsl-builder.js  (+2 more)
tools/python_pipeline/: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
tools/python_pipeline/config/: config.example.yaml
tools/python_pipeline/src/pipeline/: config.py  csv_io.py  inference_worker.py  llm_client.py  logging_utils.py  main.py  prompt_builder.py  schemas.py  writer_tool.py
tools/python_pipeline/tests/: test_config.py  test_csv_io.py  test_inference_flow.py  test_writer_tool.py
tools/python_pipeline/tests/fixtures/: sample_input.csv
(+5 files in other folders)
